src/core-crm/objects/Opportunity/fields/Proposal_Client_Comments__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Client_Comments__c</fullName>
    <label>Proposal Client Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>