src/core-crm/objects/Opportunity/fields/Proposal_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Outcome__c</fullName>
    <description>The outcome of the proposal</description>
    <label>Proposal Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>