src/core-crm/objects/Opportunity/fields/Proposal_Outcome_Comments__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Outcome_Comments__c</fullName>
    <description>Additional information about the proposal outcome.</description>
    <inlineHelpText>Additional information about the proposal outcome.</inlineHelpText>
    <label>Proposal Outcome Comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>