src/core-crm/objects/Opportunity/fields/Proposal_Outcome_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Outcome_Date__c</fullName>
    <description>The date the proposal outcome is/was recorded.</description>
    <label>Proposal Outcome Date</label>
    <type>Date</type>
</CustomField>