src/core-crm/objects/Opportunity/fields/Proposal_Status__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Status__c</fullName>
    <description>The status of the proposal that has been developed for the Opportunity.</description>
    <label>Proposal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Ready for Submission</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>