src/core-crm/objects/Opportunity/fields/Proposal_Status_Summary__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Status_Summary__c</fullName>
    <description>Summary/explanation of the proposal status.</description>
    <inlineHelpText>Summary/explanation of the proposal status.</inlineHelpText>
    <label>Proposal Status Summary</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>