src/core-crm/objects/Opportunity/fields/Pure_Project_ID1__c.field-meta.xml
<CustomField>
    <fullName>Pure_Project_ID1__c</fullName>
    <description>Identifier for a research project record from Pure.</description>
    <inlineHelpText>Identifier for a research project record from Pure.</inlineHelpText>
    <label>Pure Project ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>