src/core-crm/objects/Opportunity/fields/Pure_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Pure_Project_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to associated Pure Project record.</description>
    <label>Pure Project ID</label>
    <referenceTo>Pure_Project__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>