src/core-crm/objects/Opportunity/fields/Qrecords_Folder_Exists__c.field-meta.xml
<CustomField>
    <fullName>Qrecords_Folder_Exists__c</fullName>
    <label>Qrecords Folder Exists</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>