src/core-crm/objects/Opportunity/fields/Qrecords_Folder_Number__c.field-meta.xml
<CustomField>
    <fullName>Qrecords_Folder_Number__c</fullName>
    <label>Qrecords Folder Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>