src/core-crm/objects/Opportunity/fields/Qualification_Summary__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Summary__c</fullName>
    <label>Qualification Summary</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>