src/core-crm/objects/Opportunity/fields/QUTeX_Capacity__c.field-meta.xml
<CustomField>
    <fullName>QUTeX_Capacity__c</fullName>
    <inlineHelpText>Do we have QUTeX capacity?</inlineHelpText>
    <label>QUTeX Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>