src/core-crm/objects/Opportunity/fields/QUTeX_Faculty_Capacity__c.field-meta.xml
<CustomField>
    <fullName>QUTeX_Faculty_Capacity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QUTeX Faculty Capacity</label>
    <type>Checkbox</type>
</CustomField>