src/core-crm/objects/Opportunity/fields/Ready_For_Contract__c.field-meta.xml
<CustomField>
    <fullName>Ready_For_Contract__c</fullName>
    <description>Indicates if the Opportunity is ready for Contract stage.</description>
    <label>Ready For Contract</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>