src/core-crm/objects/Opportunity/fields/Revenue_Potential__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Potential__c</fullName>
    <inlineHelpText>This field captures the estimated revenue for QUT.</inlineHelpText>
    <label>Revenue Potential</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>