src/core-crm/objects/Opportunity/fields/Self_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Self_Evaluation__c</fullName>
    <inlineHelpText>If applicable, self-evaluation against criteria is strong?</inlineHelpText>
    <label>Self Evaluation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>