src/core-crm/objects/Opportunity/fields/Solicitation_Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Solicitation_Sub_Stage__c</fullName>
    <description>Solicitation sub-process stage.</description>
    <inlineHelpText>Solicitation sub-process stage.</inlineHelpText>
    <label>Solicitation Sub Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Near Ask</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>