src/core-crm/objects/Opportunity/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The Opportunity Start Date.</description>
    <inlineHelpText>The Opportunity Start Date.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>