src/core-crm/objects/Opportunity/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Client Approved</fullName>
            </value>
            <value>
                <fullName>Contract Created</fullName>
            </value>
            <value>
                <fullName>Contract Signed</fullName>
            </value>
            <value>
                <fullName>Drafter Review</fullName>
            </value>
            <value>
                <fullName>Drafting</fullName>
            </value>
            <value>
                <fullName>Drafting Complete</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Pending Contract Creation</fullName>
            </value>
            <value>
                <fullName>Pending Initial Proposal Approval</fullName>
            </value>
            <value>
                <fullName>Pending QUTeX Executive Approval</fullName>
            </value>
            <value>
                <fullName>QUTeX Executive Approved</fullName>
            </value>
            <value>
                <fullName>Under Client Review</fullName>
            </value>
            <value>
                <fullName>QUTeX Executive Proposal Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>