src/core-crm/objects/Opportunity/fields/Stewardship__c.field-meta.xml
<CustomField>
    <fullName>Stewardship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Stewardship object.</description>
    <inlineHelpText>Lookup to the Stewardship object.</inlineHelpText>
    <label>Stewardship</label>
    <referenceTo>Stewardship__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>