src/core-crm/objects/Opportunity/fields/Technical_Capability__c.field-meta.xml
<CustomField>
    <fullName>Technical_Capability__c</fullName>
    <inlineHelpText>Do we have technical capability to respond?</inlineHelpText>
    <label>Technical Capability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>