src/core-crm/objects/Opportunity/fields/Total_Expected_Dollar_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Expected_Dollar_Value__c</fullName>
    <description>Quantifies the expected total business value of the partnership as a dollar value.</description>
    <label>Total Expected Dollar Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>