src/core-crm/objects/Opportunity/fields/Total_Expected_Intangible_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Expected_Intangible_Value__c</fullName>
    <description>Quantifies the expected total business value of the partnership where the value is non-monetary.</description>
    <label>Total Expected Intangible Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>