src/core-crm/objects/Opportunity/fields/Viability_Analysis_Summary__c.field-meta.xml
<CustomField>
    <fullName>Viability_Analysis_Summary__c</fullName>
    <description>Explanation/description about the viability of the project.</description>
    <inlineHelpText>Explanation/description about the viability of the project.</inlineHelpText>
    <label>Viability Analysis Summary</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>