src/core-crm/objects/Opportunity/fields/Viable__c.field-meta.xml
<CustomField>
    <fullName>Viable__c</fullName>
    <description>Identifies if the Project is going to be viable or not.</description>
    <label>Viable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>