src/core-crm/objects/Opportunity/recordTypes/Commercialisation.recordType-meta.xml
<RecordType>
    <fullName>Commercialisation</fullName>
    <active>true</active>
    <businessProcess>Commercialisation</businessProcess>
    <description>Create Commercialisation opportunity to protect and commercialise the university&apos;s intellectual property, including the licensing agreements and university start-ups.</description>
    <label>Commercialisation</label>
</RecordType>