src/core-crm/objects/Opportunity/recordTypes/Corporate_Partnership.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Partnership</fullName>
    <active>true</active>
    <businessProcess>Corporate Partnership</businessProcess>
    <description>Create a corporate partnership opportunity to identify new specific interactions with contacts and organisations to support and grow industry, corporate and educational partnerships.</description>
    <label>Corporate Partnership</label>
</RecordType>