src/core-crm/objects/Opportunity/recordTypes/Individual_Giving.recordType-meta.xml
<RecordType>
    <fullName>Individual_Giving</fullName>
    <active>true</active>
    <businessProcess>Corporate Partnership</businessProcess>
    <description>Create a Advancement Opportunity for an Individual Contact.</description>
    <label>Individual Giving</label>
</RecordType>