src/core-crm/objects/Opportunity/recordTypes/International_Projects_Unit.recordType-meta.xml
<RecordType>
    <fullName>International_Projects_Unit</fullName>
    <active>true</active>
    <businessProcess>International Projects Unit</businessProcess>
    <description>Create an opportunity to explore international development and training initiatives.</description>
    <label>International Projects Unit</label>
</RecordType>