src/core-crm/objects/Opportunity/recordTypes/Organisation_Giving.recordType-meta.xml
<RecordType>
    <fullName>Organisation_Giving</fullName>
    <active>true</active>
    <businessProcess>Corporate Partnership</businessProcess>
    <description>Create a Advancement Opportunity for an Organisation.</description>
    <label>Organisation Giving</label>
</RecordType>