src/core-crm/objects/Opportunity/recordTypes/QUTex_CCE.recordType-meta.xml
<RecordType>
    <fullName>QUTex_CCE</fullName>
    <active>true</active>
    <businessProcess>QUTeX CCE</businessProcess>
    <description>QUTeX CCE</description>
    <label>QUTeX CCE</label>
</RecordType>