src/core-crm/objects/Opportunity/recordTypes/Research_Partnership.recordType-meta.xml
<RecordType>
    <fullName>Research_Partnership</fullName>
    <active>true</active>
    <businessProcess>Research Partnership</businessProcess>
    <description>Create Research Partnership opportunity to support research and research training initiatives.</description>
    <label>Research Partnership</label>
</RecordType>