src/core-crm/objects/Opportunity/validationRules/Com_CLMS_Contract_ID_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Com_CLMS_Contract_ID_is_required</fullName>
    <active>true</active>
    <description>Ensures Pure_CLMS_Contract_Id__c is populated</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &quot;Commercialisation&quot;,
ISCHANGED(StageName),
OR(ISPICKVAL(StageName, &quot;Discontinued&quot;),ISPICKVAL(StageName, &quot;Executed&quot;)),
ISBLANK(CLMS_Contract_ID__c)
)</errorConditionFormula>
    <errorDisplayField>CLMS_Contract_ID__c</errorDisplayField>
    <errorMessage>Mandatory Field</errorMessage>
</ValidationRule>