src/core-crm/objects/Opportunity/validationRules/Com_Collaborate_Stage_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Com_Collaborate_Stage_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName =&quot;Commercialisation&quot;,
ISCHANGED(StageName),
ISPICKVAL( PRIORVALUE(StageName) ,&quot;Collaborate&quot;),
AND(NOT(ISPICKVAL( StageName , &apos;Negotiate&apos;)),
NOT(ISPICKVAL( StageName , &apos;Discontinued&apos;)))
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>You can only progress to the next stage which is Negotiate or choose to discontinue the opportunity</errorMessage>
</ValidationRule>