src/core-crm/objects/Opportunity/validationRules/Com_Contract_Must_Be_Terminated.validationRule-meta.xml
<ValidationRule>
    <fullName>Com_Contract_Must_Be_Terminated</fullName>
    <active>false</active>
    <description>Ensures that Contract Status is terminated when stage is moved to discontinued.</description>
    <errorConditionFormula>AND (
RecordType.DeveloperName =&quot;Commercialisation&quot;,
ISCHANGED(StageName),
ISPICKVAL( PRIORVALUE(StageName) ,&quot;Contract&quot;),
ISPICKVAL(StageName, &quot;Discontinued&quot;)
)</errorConditionFormula>
    <errorMessage>Contract Status must be Terminated</errorMessage>
</ValidationRule>