src/core-crm/objects/Opportunity/validationRules/Com_Contract_Stage_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Com_Contract_Stage_Validation</fullName>
    <active>true</active>
    <description>Ensures that user can only progress to next stage i.e. Executed or Discontinued</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;Commercialisation&apos;,
ISCHANGED(StageName),
ISPICKVAL( PRIORVALUE(StageName) ,&apos;Contract&apos;),
NOT(ISPICKVAL(StageName,&apos;Executed&apos;)),
NOT(ISPICKVAL(StageName,&apos;Discontinued&apos;)),
NOT( $Permission.Bypass_Engagement_Opportunity_Stage_Validation)
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>You can only progress the opportunity to next stage i.e. Executed or Discontinued</errorMessage>
</ValidationRule>