src/core-crm/objects/Opportunity/validationRules/Com_Description_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Com_Description_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
   RecordType.DeveloperName =&quot;Commercialisation&quot;,
   ISCHANGED(StageName),
   ISPICKVAL(StageName, &quot;Negotiate&quot;),
   ISBLANK(Description)
)</errorConditionFormula>
    <errorDisplayField>Description</errorDisplayField>
    <errorMessage>Mandatory Field</errorMessage>
</ValidationRule>