src/core-crm/objects/Opportunity/validationRules/Com_Loss_Reason_Explanation_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Com_Loss_Reason_Explanation_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;Commercialisation&apos;,
ISCHANGED(StageName),
ISPICKVAL(StageName, &quot;Discontinued&quot;),
NOT(ISPICKVAL(PRIORVALUE(StageName) ,&apos;Contract&apos;)),
ISBLANK(Loss_Reason_Explanation__c)
)</errorConditionFormula>
    <errorDisplayField>Loss_Reason_Explanation__c</errorDisplayField>
    <errorMessage>Mandatory Field</errorMessage>
</ValidationRule>