src/core-crm/objects/Opportunity/validationRules/Com_Negotiate_Stage_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Com_Negotiate_Stage_Validation</fullName>
    <active>true</active>
    <description>Ensures that user can only progress to the next stage which is Contract or mark the Opportunity as Discontinued</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;Commercialisation&apos;,
ISCHANGED(StageName),
ISPICKVAL( PRIORVALUE(StageName) ,&apos;Negotiate&apos;),
NOT(ISPICKVAL(StageName,&apos;Contract&apos;)),
NOT(ISPICKVAL(StageName,&apos;Discontinued&apos;)),
NOT( $Permission.Bypass_Engagement_Opportunity_Stage_Validation)
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>You can only progress to next stage which is Contract or choose to discontinue the opportunity</errorMessage>
</ValidationRule>