src/core-crm/objects/Opportunity/validationRules/Com_Negotiation_Outcome_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Com_Negotiation_Outcome_is_Required</fullName>
    <active>true</active>
    <description>Negotiation Outcome Should be successful to move the opportunity to contract stage</description>
    <errorConditionFormula>AND (
ISCHANGED( StageName ),
ISPICKVAL( PRIORVALUE(StageName), &apos;Negotiate&apos; ),
ISPICKVAL( StageName , &apos;Contract&apos; ),
NOT(ISPICKVAL(  Negotiation_Outcome__c , &apos;Successful&apos; ))
)</errorConditionFormula>
    <errorDisplayField>Negotiation_Outcome__c</errorDisplayField>
    <errorMessage>Outcome must be successful to progress</errorMessage>
</ValidationRule>