src/core-crm/objects/Opportunity/validationRules/Com_Ready_for_Contract_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Com_Ready_for_Contract_is_Required</fullName>
    <active>true</active>
    <description>Ready for Contract should be true in order to proceed to contract stage.</description>
    <errorConditionFormula>AND (
RecordType.DeveloperName = &apos;Commercialisation&apos;,
ISCHANGED( StageName ),
ISPICKVAL( StageName , &apos;Contract&apos; ),
NOT(ISPICKVAL(  Ready_For_Contract__c , &apos;Yes&apos; ))
)</errorConditionFormula>
    <errorDisplayField>Ready_For_Contract__c</errorDisplayField>
    <errorMessage>Ready for contract should be true</errorMessage>
</ValidationRule>