src/core-crm/objects/Opportunity/validationRules/Country_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_is_Required</fullName>
    <active>true</active>
    <description>Country is Required</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName =&quot;International_Projects_Unit&quot;,
ISCHANGED(StageName),
ISPICKVAL(PRIORVALUE(StageName), &quot;Identify&quot;),
ISPICKVAL(StageName , &quot;Assessment&quot;),
ISBLANK(TEXT(Country__c))
)</errorConditionFormula>
    <errorDisplayField>Country__c</errorDisplayField>
    <errorMessage>Mandatory field</errorMessage>
</ValidationRule>