src/core-crm/objects/Opportunity/validationRules/CP_CLMS_Contract_ID_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CP_CLMS_Contract_ID_Is_Required</fullName>
    <active>true</active>
    <description>Ensures CLMS Contract Id is populated</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &quot;Corporate_Partnership&quot;,
ISCHANGED(StageName),
ISPICKVAL( PRIORVALUE(StageName) ,&quot;Contract&quot;),
OR(ISPICKVAL(StageName, &quot;Discontinued&quot;),
   ISPICKVAL(StageName, &quot;Executed&quot;)),
ISBLANK( CLMS_Contract_ID__c )
)</errorConditionFormula>
    <errorDisplayField>CLMS_Contract_ID__c</errorDisplayField>
    <errorMessage>Mandatory Field</errorMessage>
</ValidationRule>