src/core-crm/objects/Opportunity/validationRules/CP_Contract_Must_Be_Internally_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>CP_Contract_Must_Be_Internally_Approved</fullName>
    <active>true</active>
    <description>Ensures that Contract Status is internally approved when stage is moved to executed.</description>
    <errorConditionFormula>AND (
RecordType.DeveloperName =&quot;Corporate_Partnership&quot;,
ISCHANGED(StageName),
ISPICKVAL( PRIORVALUE(StageName) ,&quot;Contract&quot;),
ISPICKVAL(StageName, &quot;Executed&quot;),
NOT(ISPICKVAL( CLMS_Contract_Status__c , &quot;Internally Approved&quot;))
)</errorConditionFormula>
    <errorDisplayField>CLMS_Contract_Status__c</errorDisplayField>
    <errorMessage>Contract status must be Internally Approved</errorMessage>
</ValidationRule>