src/core-crm/objects/Opportunity/validationRules/CP_Contract_Must_Be_Terminated.validationRule-meta.xml
<ValidationRule>
    <fullName>CP_Contract_Must_Be_Terminated</fullName>
    <active>true</active>
    <description>Ensures that Contract Status is terminated when stage is moved to discontinued.</description>
    <errorConditionFormula>AND (
RecordType.DeveloperName =&quot;Corporate_Partnership&quot;,
ISCHANGED(StageName),
ISPICKVAL( PRIORVALUE(StageName), &quot;Contract&quot;),
ISPICKVAL(StageName, &quot;Discontinued&quot;),
NOT(ISPICKVAL( CLMS_Contract_Status__c , &quot;Terminated&quot;))
)</errorConditionFormula>
    <errorDisplayField>CLMS_Contract_Status__c</errorDisplayField>
    <errorMessage>Contract status must be Terminated in order to discontinue at this stage</errorMessage>
</ValidationRule>