src/core-crm/objects/Opportunity/validationRules/CP_Description_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CP_Description_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
   RecordType.DeveloperName =&quot;Corporate_Partnership&quot;,
   ISCHANGED(StageName),
   ISPICKVAL(StageName, &quot;Negotiate&quot;),
   ISBLANK( Description )
)</errorConditionFormula>
    <errorDisplayField>Description</errorDisplayField>
    <errorMessage>Mandatory Field</errorMessage>
</ValidationRule>