src/core-crm/objects/Opportunity/validationRules/CP_Identify_Stage_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>CP_Identify_Stage_Validation</fullName>
    <active>true</active>
    <description>Ensures that user can only progress to the next stage which is Negotiate or mark the Opportunity as Discontinued.</description>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &apos;Corporate_Partnership&apos;,
    ISCHANGED(StageName),
    ISPICKVAL( PRIORVALUE(StageName) ,&apos;Identify&apos;),
    NOT(ISPICKVAL(StageName,&apos;Negotiate&apos;)),
    NOT(ISPICKVAL(StageName,&apos;Discontinued&apos;))
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>You can only progress to the next stage which is Negotiate or mark the Opportunity as Discontinued</errorMessage>
</ValidationRule>