src/core-crm/objects/Opportunity/validationRules/CP_Loss_Reason_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CP_Loss_Reason_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;Corporate_Partnership&apos;,
ISCHANGED(StageName),
ISPICKVAL(StageName, &quot;Discontinued&quot;),
ISPICKVAL((Loss_Reason__c), &apos;&apos;)
)</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>Mandatory Field</errorMessage>
</ValidationRule>