src/core-crm/objects/Opportunity/validationRules/CP_Negotiate_Stage_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>CP_Negotiate_Stage_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;Corporate_Partnership&apos;,
ISCHANGED( StageName ),
ISPICKVAL( PRIORVALUE( StageName ) , &apos;Negotiate&apos;),
NOT( ISPICKVAL( StageName , &apos;Proposal&apos;) ),
NOT( ISPICKVAL( StageName , &apos;Discontinued&apos;) ) )</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>ou can only progress to the next stage which is Proposal stage or mark the Opportunity as Discontinued.</errorMessage>
</ValidationRule>