src/core-crm/objects/Opportunity/validationRules/CP_Outcome_Total_Value_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CP_Outcome_Total_Value_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;Corporate_Partnership&apos;,
ISCHANGED( StageName ),
ISPICKVAL( PRIORVALUE( StageName ) , &apos;Negotiate&apos;),
ISPICKVAL( StageName , &apos;Proposal&apos;),
NOT( ISBLANK( Amount ) )
)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>The Outcome Total Value should be greater than zero.</errorMessage>
</ValidationRule>