src/core-crm/objects/Opportunity/validationRules/CP_Proposal_Stage_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>CP_Proposal_Stage_Validation</fullName>
    <active>true</active>
    <description>Ensures that user can only progress to next stage i.e. Contract or Discontinued</description>
    <errorConditionFormula>AND( 
RecordType.DeveloperName = &apos;Corporate_Partnership&apos;,  
ISCHANGED( StageName ),  
ISPICKVAL( PRIORVALUE( StageName ) , &apos;Proposal&apos;),  
NOT( ISPICKVAL( StageName , &apos;Contract&apos;) ), 
NOT( ISPICKVAL( StageName , &apos;Discontinued&apos;) ) )</errorConditionFormula>
    <errorMessage>You can only progress to the next stage which is Contract or mark opportunity as Discontinued.</errorMessage>
</ValidationRule>