src/core-crm/objects/Opportunity/validationRules/CP_Proposal_Status_on_Contract_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>CP_Proposal_Status_on_Contract_Stage</fullName>
    <active>true</active>
    <description>Proposal Status must be Accepted to move to Contract stage</description>
    <errorConditionFormula>AND( RecordType.DeveloperName = &apos;Corporate_Partnership&apos;, ISCHANGED( StageName ),
ISPICKVAL( PRIORVALUE( StageName ) , &apos;Proposal&apos;),
NOT( ISPICKVAL(  Proposal_Status__c  , &apos;Accepted&apos;)) )</errorConditionFormula>
    <errorMessage>Proposal status must be accepted in order to progress to the contract stage.</errorMessage>
</ValidationRule>