src/core-crm/objects/Opportunity/validationRules/CP_Proposal_StatusSummary_Contract_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>CP_Proposal_StatusSummary_Contract_Stage</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;Corporate_Partnership&apos;,
ISCHANGED( StageName ),
ISPICKVAL( PRIORVALUE( StageName ) , &apos;Proposal&apos;),
ISBLANK( Proposal_Status_Summary__c ) )</errorConditionFormula>
    <errorDisplayField>Proposal_Status_Summary__c</errorDisplayField>
    <errorMessage>Mandatory field.</errorMessage>
</ValidationRule>