src/core-crm/objects/Opportunity/validationRules/Description_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_is_Required</fullName>
    <active>true</active>
    <description>Description is required to update Stage</description>
    <errorConditionFormula>AND (
    RecordType.DeveloperName =&quot;QUTex_CCE&quot;,
    ISCHANGED( StageName ),
    ISPICKVAL( PRIORVALUE(StageName), &apos;Qualify&apos; ),
    ISPICKVAL( StageName , &apos;Proposal&apos; ),
    ISBLANK(  Description )
)</errorConditionFormula>
    <errorDisplayField>Description</errorDisplayField>
    <errorMessage>Description is required to update Stage</errorMessage>
</ValidationRule>